--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "tailwindcss": "^3.0.23"
   },
   "scripts": {
-      "build": "npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css && node server.js"
+      "build": "rm ./html/css/main.css npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css && node ./server.js"
   }
 }
