--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "scripts": {
       "build": "rm ./html/css/main.css npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css"
       "run": "node ./server.js"
+      "start": "rm ./html/css/main.css npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css && node ./server.js"
   }
 }
