--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
+    "chalk": "^5.0.0",
     "child_process": "^1.0.2",
-    "colors": "^1.4.0",
     "express": "^4.17.3",
     "fs": "^0.0.2",
     "helmet": "^5.0.2",
