--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: self-host
+    runs-on: runs-on: [self-hosted, linux, x64, home]
     permissions:
       actions: read
       contents: read
