--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "child_process": "^1.0.2",
+    "daisyui": "^2.4.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
     "fs": "^0.0.2",
