--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ workflows:
     jobs:
       - swissknife/codeql-analysis:
           name: "CodeQL Scan"
+          languages: "Javascript"
 jobs:
   build:
     docker:
