--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,12 @@
 version: 2.1
-orbs: 
-  swissknife: roopakv/swissknife@0.66.0
-workflows:
-  codeql: # Vulnerabilities check.
-    jobs:
-      - swissknife/codeql-analysis:
-          name: "CodeQL Scan"
-          languages: "Javascript"
 jobs:
   build:
     docker:
       - image: nodejs:latest
-    parallelism: 4
     steps:
       - checkout
-      - run: npm install -g eslint
+      - run: npm install -g eslint # reviewdog
       - run: curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s -- -b ./bin
       - run: eslint ./... 2>&1 | ./bin/reviewdog -reporter=github-pr-review
+      - run: wget https://github.com/github/codeql-cli-binaries/releases/download/v2.8.2/codeql-linux64.zip
+      - run: unzip codeql-linux64.zip -d ../codeql/
