--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: nodejs:latest
+      - image: node:latest
     steps:
       - checkout
       - run: npm install -g eslint # reviewdog
