--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,5 @@ jobs:
       - checkout
       - run: npm install -g eslint # reviewdog
       - run: curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s -- -b ./bin
+      - run: touch .reviewdog.yml
       - run: eslint ./... 2>&1 | ./bin/reviewdog -reporter=github-pr-review
-      - run: wget https://github.com/github/codeql-cli-binaries/releases/download/v2.8.2/codeql-linux64.zip
-      - run: unzip codeql-linux64.zip -d ../codeql/
