--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss-import": "^14.0.2",
     "postcss-nesting": "^10.1.2",
     "postcss-scss": "^4.0.3",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23"
   },
   "scripts": {
