Fix unable to run script on windows Fix #23

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "tailwindcss": "^3.0.23"
   },
   "scripts": {
-    "build": "rm -f ./html/css/main.css && npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify",
+    "build": "npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify",
     "quick": "node ./server.js",
-    "start": "rm -f ./html/css/main.css && npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify && node ./server.js"
+    "start": "npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify && node ./server.js"
   }
 }
