Change script name change from 'npm run start' => 'npm run dev'

--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "scripts": {
     "build": "npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify",
     "quick": "node ./server.js",
-    "start": "npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify && node ./server.js"
+    "dev": "npx tailwindcss -i ./html/css/main-prep.css -o ./html/css/main.css --minify && node ./server.js"
   }
 }
